# NES-Emulator-PrjGen-Improvement

./: .gitignore  DeleteProjectFiles.sh  GenerateProjectFiles.sh  Makefile  README.md  premake5.lua
src/: CMakeLists.txt  PPUArchitechture.h  controls.cpp  controls.h  globals.h  logging.cpp  logging.h  main.cpp  memory.cpp  memory.h  opcodeFunction.cpp  opcodeFunction.h  parser.cpp  parser.h  processorArchitechture.h  processorExecution.cpp  processorExecution.h  rendering.cpp  rendering.h
